--- a/install.plist
+++ b/install.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://cdn.discordapp.com/attachments/983350005584760862/1088862975865139200/iCreate_2.11_1679674931.ipa</string>
+					<string>https://files.dindegmdps.us.to/api/public/dl/roj9g10o</string>
 				</dict>
 				<dict>
 					<key>kind</key>
