--- a/install.plist
+++ b/install.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://files.dindegmdps.us.to/api/public/dl/roj9g10o</string>
+					<string>https://github.com/masckmaster2007/altcreate/releases/download/no/iCreate_2.11_1679683596.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
